2008-02-27  Kevin B. Kenny  <kennykb@acm.org>

	* doc/clock.n: Corrected minor indentation gaffe in the
	penultimate paragraph. [Bug 1898025]
	* generic/tclClock.c (ParseClockFormatArgs): Changed to check that 
	the clock value is in the range of a 64-bit integer. [Bug 1862555]
	* library/clock.tcl (::tcl::clock::format, ::tcl::clock::scan,
	::tcl::clock::add, ::tcl::clock::LocalizeFormat): Fixed bugs
	in caching of localized strings that caused weird results when
	localized date/time formats were used. [Bug 1902423]
	* tests/clock.test (clock-61.*, clock-62.1): Regression tests
	for [Bug 1862555] and [Bug 1902423].
	
2008-02-26  Joe English  <jenglish@users.sourceforge.net>

	* generic/tclIORChan.c(enum MethodName),
	generic/tclCompExpr.c(enum Marks): More stray trailing ","s

2008-02-26  Joe English  <jenglish@users.sourceforge.net>

	* unix/configure.in(socklen_t test): Define socklen_t 
	as "int" if missing, not "unsigned".
	Use AC_TRY_COMPILE instead of AC_EGREP_HEADER.
	* unix/configure: regenerated.

2008-02-26  Joe English  <jenglish@users.sourceforge.net>

	* generic/tclCompile.h: Remove stray trailing "," from 
	enum InstOperandType definition (C99ism).

2008-02-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclUtil.c (TclReToGlob): fix the handling of the last
	* tests/regexpComp.test:	   star possibly being escaped in
	determining right anchor. [Bug 1902436]

2008-02-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/pkgIndex.tcl: Set version 2.5.5
	* library/http/http.tcl:     bug #1868845 - it is better to do the
	[eof] check after trying to read from the socket. No clashes found
	in testing.  Added http::meta command to access the http headers.

2008-02-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/pkgIndex.tcl: Set version 2.5.4
	* library/http/http.tcl:     Fix for bug #1818565. Always check that
	the state array exists in the http::status command.

2008-02-13  Don Porter	<dgp@users.sourceforge.net>
